# mashup-cli

./: .gitignore  README.md  pyproject.toml
docs/: mashup-cli-prd.md  roadmap.md
src/mashup_cli/: auth.py  client.py  config.py  main.py  output.py
src/mashup_cli/commands/: applications.py  generations.py  invite.py  members.py  push.py  schedules.py  score.py  storage.py
tests/: test_config.py
